dark mode fix

--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -12,13 +12,6 @@ a{
 			color:#22884C;
 		}
 
-span{
-	background-color: #e0e0e0;
-}
-	.dark span{
-		background-color: #757575;
-	}
-
 /* DARK MODE */
 .dark{
 	color:#f9f9f9;
