--- a/resources/css/photos.css
+++ b/resources/css/photos.css
@@ -110,9 +110,6 @@
 	font-size: 35px;
 	font-weight: 100;
 }
-	.close .dark{
-		background-color: #222;
-	}
   
 .close:hover,
 .close:focus {
